fix for dom restructure

--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -28,6 +28,7 @@ article {
 section {
 	max-width: 1150px;
 	margin: 0 auto 30px;
+	padding-top: 1px;
 }
 
 strong {
@@ -58,12 +59,10 @@ h5,
 h6 {
 	font-family: @body-font-bold;
 	font-weight: 700;
-	color: @header-color;
 }
 
 h3 {
 	font-family: @body-font-bold;
-	color: @header-color;
 }
 
 .h2,
