--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -166,7 +166,7 @@
   overflow: hidden;
   @media(max-width: @mobile-breakpoint) {
     display: block;
-    margin: 20px 0;
+    margin: 0 0 20px;
     width: auto!important;
   }
 }
