--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -8,7 +8,7 @@
     &.language-http,
     &.language-jinja,
     &.language-xml {
-      color: #8792a1;
+      color: #5c646f;
       background: rgba(169, 190, 247, 0.13);
       border: 1px solid #e9eef7;
 
