--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -345,7 +345,7 @@
 	max-width: 90%;
 	margin-top: 40px;
 	@media(max-width: @mobile-breakpoint) {
-		margin: 30px 20px;
+		margin: 30px auto;
 		width: 92%;
 	}
 
