--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -10,7 +10,7 @@
   color: #5f5f5f;
   @media(max-width: @mobile-breakpoint) {
     width: auto !important;
-    margin: 20px;
+    margin: 0 0 20px;
   }
 
   .author {
