post footer adjustments

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -184,7 +184,7 @@
     height: 130px;
     background-size: cover !important;
     background-position-y: center !important;
-    box-shadow: 0 4px 2px -2px rgba(20, 24, 53, 0.15);
+    border-bottom: 1px solid #f3f2f2;
     background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
   }
 }
