--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -6,7 +6,7 @@
     right: 0;
     width: 100%;
     display: none;
-    margin: auto;
+    margin: auto auto 20px;
     box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
     @media(max-width: @mobile-breakpoint) {
