post preview style tweaks

--- a/src/less/critical.less
+++ b/src/less/critical.less
@@ -6,3 +6,6 @@
 @import './global/fonts.less';
 @import './global/nav.less';
 @import './global/layout.less';
+@import './global/postlist.less';
+@import './global/postpreview.less';
+@import './global/widgets.less';
