--- a/src/less/posts/previewplaceholder.less
+++ b/src/less/posts/previewplaceholder.less
@@ -62,8 +62,8 @@
   background-image: @placeholderLoadingGradient;
   background-size: @placeholderLoadingGradientWidth 100%;
   padding: 0 20px 20px;
-  border-bottom: 1px solid #c6ced8;
-  margin-bottom: 20px;
+  /*border-bottom: 1px solid #c6ced8;*/
+  margin-bottom: 30px;
 }
 
 .ui.placeholder .gap {
