--- a/index.hbs
+++ b/index.hbs
@@ -2,7 +2,7 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap">
-	<div class="page-container sidebar-layout">
+	<div class="page-container home sidebar-layout">
 		<!-- end main post area -->
 		{{! insert sidebar partial}}
 		{{> sidebar}}
@@ -12,7 +12,7 @@
 			{{/is}}
 			<main class="postlist">
 				{{> loop}}
-				{{#is 'home'}}
+				{{#is 'home, paged'}}
 					{{pagination}}
 				{{/is}}
 			</main>
