--- a/post.hbs
+++ b/post.hbs
@@ -66,7 +66,7 @@
 	<!-- end main post area -->
 	{{> posts/afterpost}}
 	{{#contentFor "scripts"}}
-		<script async src="{{asset "js/posts.js"}}"></script>
+		<script src="{{asset "js/posts.js"}}"></script>
 		<script src="https://hackersandslackers.com/assets/js/includes/highlight.min.js"></script>
 		<script>
 			hljs.configure({
