--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -4,7 +4,7 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: #111f4a !important;
+	background: #191a1d !important;
 	background-size: cover;
 	padding: 35px 8%;
 	color: #fff;
@@ -243,7 +243,7 @@
 
 .copyright {
 	width: 100%;
-	background: #0e1a3d;
+	background: #131314;
 	text-align: center;
 	padding: 25px 0;
 
