author page widgets fix

--- a/src/less/author/website.less
+++ b/src/less/author/website.less
@@ -21,6 +21,11 @@
 				margin: 0;
 				border: 0;
 				border-radius: 0;
+        overflow: hidden;
+
+        &:hover {
+          cursor: pointer;
+        }
 
 				h4 {
 					position: absolute;
@@ -39,7 +44,14 @@
 					margin: 0;
 				}
 
-				a {}
+				.link-name {
+          text-decoration: none;
+          color: white;
+          bottom: 5px;
+          position: absolute;
+          z-index: 10;
+          left: 10px;
+        }
 
 				i {
 					position: absolute;
