--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -210,10 +210,6 @@
 				margin: auto 40px auto 0 !important;
 			}
 
-			&:last-of-type {
-				margin: auto 0;
-			}
-
 			i {
 				height: 16px;
 				display: inline-block;
@@ -345,7 +341,7 @@
 		text-align: left;
 		display: flex;
 		justify-content: space-between;
-		padding: 15px 0 0;
+		padding: 15px 0 5px;
 		align-items: center;
 		transition: @transition;
 		@media(max-width: 950px) {
@@ -420,7 +416,7 @@
 }
 
 .content {
-	padding: 0 5px;
+	padding: 0 10px;
 	@media(max-width: 950px) {
 		padding: 0 2px;
 	}
