--- a/partials/author/widget-authorwebsite.hbs
+++ b/partials/author/widget-authorwebsite.hbs
@@ -1,7 +1,7 @@
 <!-- Start Website Widget -->
 {{#if "website"}}
   <div class="widget website">
-    <h4 class="title" style="margin-bottom:0;">Website</h4>
+    <h4 class="title">Website</h4>
     <a class="previewimage" href="{{website}}">{{website}}</a>
   </div>
 {{/if}}
