--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -15,8 +15,6 @@
 			margin: 10px 10px 10px 0;
 		}
 
-
-
 		a:hover {
 			color: @hover-color;
 		}
@@ -33,12 +31,16 @@
 			}
 		}
 
+		.meta-info {
+			    margin: 15px auto;
+		}
+
 		.meta-item {
 			line-height: 1.3;
 			margin: 0 auto;
 
 			@media(max-width: @mobile-breakpoint) {
-			  margin: 0 auto 3px; 
+			  margin: 0 auto 3px;
 			}
 		}
 	}
