--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -11,7 +11,7 @@
 		flex-wrap: wrap;
 
 		a {
-			color: #18476e;
+			color: #7591a9;
 			line-height: 1.5em;
 			display: inline-block;
 			font-size: 0.8em !important;
@@ -23,10 +23,9 @@
 			font-weight: 300;
 			flex-grow: 1;
 			text-align: center;
-			margin: 0 4px 8px;
+			margin: 0 2px 4px;
 			padding: 7px 12px;
-			border: 1px solid rgba(201, 213, 228, 0.79);
-			background: rgba(195, 227, 251, 0.2);
+			border: 1px solid rgba(220, 228, 238, 0.79);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
 				margin: 0 2px 5px;
