--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -43,10 +43,8 @@
   }
 
   iframe {
-    /*box-shadow: 0 0 22px #8d9fb9;*/
     margin: 0;
     width: 100%;
-    left: 0;
   }
 
   .page-title {
@@ -79,8 +77,11 @@
 
   .welcomevideo,
   iframe {
-    height: 400px;
-    display: block;
+  height: 300px;
+  display: block;
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 20px;
     @media(max-width: @tablet-breakpoint) {
       height: 451px;
     }
