--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -287,7 +287,7 @@
 						}
 					}
 				}
-				
+
 				figure {
 			    width: 99%;
 			    max-width: 99%;
@@ -360,7 +360,7 @@
 			      cursor: zoom-in;
 			    }
 			  }
-				
+
 				/*   Start of Protip box */
 				.protip {
 					background: rgba(255, 222, 196, 0.42);
@@ -409,9 +409,15 @@
 						}
 					}
 
-					li::before {
-						color: #dc9e5f;
+					ul, ol {
+						margin: 20px 30px 0;
+
+						li::before {
+							color: #dc9e5f;
+						}
 					}
+
+
 
 					code {
 						border-radius: 3px;
@@ -422,6 +428,7 @@
 						text-shadow: unset;
 						font-size: .85em;
 						font-family: 'dm', sans-serif;
+						border: 1px solid #e8cfbb;
 					}
 
 					pre {
@@ -450,7 +457,7 @@
 						}
 					}
 				}
-				
+
 				/*  Start of Blockquote  */
 				blockquote {
 					color: #8d969a;
@@ -559,7 +566,7 @@
 				text-align: right;
 			}
 
-			
+
 
 			.handscroller {
 				&:hover {
