--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -114,18 +114,18 @@
     font-weight: 600;
   }
 
-  .authormeta {
+  .meta {
     display: flex;
     justify-content: left;
     align-items: center;
     width: 100%;
     margin: 10px 0;
 
-    & > span {
+    .meta-item {
       display: inline-block;
       color: #868892;
       width: fit-content;
-      margin-right: 40px;
+      margin-right: 20px;
       margin-bottom: 0;
       font-weight: 100;
       @media(max-width: @tablet-breakpoint) {
