--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -177,10 +177,18 @@ blockquote pre {
     border-radius: 0 !important;
   }
 
+  pre {
+    font-size: unset;
+  }
+
   code {
-    font-size: 12px;
+    font-size: 12px !important;
     width: fit-content;
     min-width: 100%;
+  }
+
+  * {
+    font-size: 12px !important;
   }
 }
 
