mobile code snippet sizes

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -44,7 +44,7 @@ blockquote pre {
       font-size: 0.8em;
       @media(max-width: @mobile-breakpoint) {
         overflow-y: hidden;
-        font-size: 12px;
+        line-height: 1.5;
       }
     }
 
