font color optimization

--- a/src/less/author/medium.less
+++ b/src/less/author/medium.less
@@ -27,7 +27,7 @@
 
     .medium-widget-article__title {
       font-family: @header-font-bold;
-      color: @text-color-heading;
+      color: @grey-header;
       font-size: 1.2em;
       line-height: 1.2;
     }
