--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -258,7 +258,7 @@
         }
 
         .post-excerpt {
-          color: #153b52;
+          color: @grey-header;
           font-family: @header-font;
           font-size: 1em;
           font-weight: 100;
