--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -26,14 +26,14 @@ article {
 }
 
 section {
-	max-width: 1050px;
+	max-width: 1100px;
 	margin: 0 auto 30px;
 	padding-top: 1px;
 }
 
 strong {
 	font-family: @body-font-bold;
-	color: #555560;
+	color: @grey-header;
 }
 
 a {
@@ -49,7 +49,7 @@ h1 {
 	font-family: @header-font;
 	font-size: 2em;
 	font-weight: 500;
-	color: @header-color;
+	color: @grey-header;
 }
 
 
@@ -89,7 +89,7 @@ h5 {
 	font-weight: 500;
 	margin: 5px 0 0;
 	font-family: @body-font;
-	color: @text-color-heading;
+	color: @grey-header;
 	line-height: 1;
 	text-align: left;
 	@media(max-width: @mobile-breakpoint) {
@@ -124,8 +124,8 @@ input:hover {
 }
 
 .btn-default[disabled] {
-	border: 1px solid @text-color-heading;
-	background: @text-color-heading;
+	border: 1px solid @grey-header;
+	background: @grey-header;
 	color: white;
 }
 
