--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -110,7 +110,7 @@
 			}
 
 			a {
-				color: @text-color-heading;
+				color: @h1-color;
 				transition: @transition;
 				font-family: @header-font-bold;
 
@@ -132,9 +132,9 @@
 			margin: 5px auto 0;
 			line-height: 1.2;
 			font-size: 1.15em;
-			color: #153b52;
 			font-family: @header-font;
 			transition: @transition;
+			color: @h1-color;
 			@media(max-width: @mobile-breakpoint) {
 				margin: 5px auto 0;
 				font-size: 1.05em !important;
