--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -8,7 +8,7 @@
 @button-hover: #30b1a7;
 @button-shadow: #4497b8;
 @h1-color: #2f394f;
-@header-color: #276890;
+@grey-header: #555560;
 @bg-color: #ecf1f9;				       	// Background color / secndary theme color
 @bg-color-light: #e0ecef;			    // Light background color
 @bg-color-footer: #202020;			  // Footer background color
@@ -16,7 +16,6 @@
 @text-color: #373940;							// Main text color
 @meta-color: #373b46;				      // Meta info text color
 @post-text-color: #4e505a;        // Unclear why this is different from body font
-@text-color-heading: #153b52;     // Heading text color
 @text-color-footer: #b4b4b4;
 @text-color-light: #959595;		   	// Light text color
 @border-color: #ebebeb;
