--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -539,7 +539,7 @@
 			text-transform: uppercase;
 			font-size: 1.2em;
 			font-family: @body-font-bold;
-			color: @header-color;
+			color: @grey-header;
 			font-weight: 500;
 		}
 
@@ -551,7 +551,7 @@
 			text-transform: uppercase;
 			font-family: @body-font-bold;
 			letter-spacing: 1px;
-			color: @header-color;
+			color: @grey-header;
 			margin-top: 0;
 		}
 
