--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -125,7 +125,7 @@
 
 				h2 {
 					margin: 40px 0 5px;
-					color: #555560;
+					color: @grey-header;
 					line-height: 1.3;
 					font-family: @body-font;
 					font-weight: 100!important;
@@ -148,7 +148,7 @@
 				h3 {
 					font-size: 1.3em;
 					line-height: 1.2;
-					color: #555560;
+					color: @grey-header;
 					margin: 40px 0 5px;
 					font-family: @body-font-bold;
 					font-weight: 300;
