--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -5,7 +5,7 @@
 ====================================================*/
 nav {
 	margin-bottom: 30px;
-	box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
+	border-bottom: 1px solid #ebedf2;
 	@media(max-width: @tablet-breakpoint) {
 		margin-bottom: 0 !important;
 	}
