mobile font sizes, tag covers, box shadows

--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -35,20 +35,11 @@
       }
 
       .post-excerpt {
-        font-size: 1em;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        display: -webkit-box;
-        text-overflow: ellipsis;
+        display: none;
       }
 
       .post-head .post-title {
-        font-size: 1.4em;
-
-        @media(max-width: @tablet-breakpoint) {
-            font-size: 1.4em;
-        }
+        font-size: 1.3em;
       }
 
       .btn {
