--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -3,9 +3,9 @@
 
 .post-preview {
 	padding: 15px;
-	box-shadow: @shadow-color;
 	margin-bottom: 30px;
 	background: white;
+	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 	transition: background .2s ease-out;
 	order: 2;
 
