--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -104,7 +104,6 @@
 		article {
 			width: 100% !important;
 			padding: 0 !important;
-			box-shadow: 0 5px 3px rgba(80, 82, 204, 0.05) !important;
 			background: white;
 			margin-bottom: 0;
 			position: relative;
@@ -206,7 +205,6 @@
 						text-align: left;
 						line-height: 1.8 !important;
 						font-style: normal;
-						font-size: .95em;
 					}
 				}
 
@@ -465,10 +463,9 @@
 					font-size: 1em;
 					line-height: 1.6;
 					overflow: hidden;
-					margin: 40px auto;
-					max-width: 90%;
-					border-radius: 5px;
-					font-weight: 300;
+					margin: 30px auto;
+					max-width: 85%;
+					font-style: italic;
 					border-left: 0.4em solid #DDDFE2;
 
 					& > p {
