--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -1,39 +1,6 @@
 @import "../global/variables.less";
 
 .tag-template {
-  .series-cover {
-    background-size: cover;
-    background-position-y: center;
-    height: 250px;
-    background-color: #324a6e;
-    background-blend-mode: multiply;
-    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
-    @media(max-width: @mobile-breakpoint) {
-      margin-left: calc(~"-50vw + 50%") !important;
-      margin-right: calc(~"-50vw + 50%") !important;
-      margin-top: -20px;
-    }
-
-    .tag-name {
-      font-size: 2.2em;
-      color: white !important;
-      font-family: @body-font-bold;
-      text-shadow: 0 0 20px #2f2d56;
-      margin-top: 75px;
-    }
-
-    .tag-description {
-      font-weight: 300;
-      line-height: 1.5;
-      max-width: 90%;
-      margin: 20px auto 0;
-      color: white;
-      font-family: @body-font;
-      text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
-      font-size: 1em;
-    }
-  }
-
   .postlist {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 3%;
@@ -103,11 +70,14 @@
       }
 
       .post-title {
-        font-size: 1.4em;
+        font-size: 1.3em;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
 
         a {
           font-family: @header-font-bold;
-          font-weight: 500;
         }
       }
 
@@ -119,23 +89,7 @@
       }
 
       .post-excerpt {
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        display: -webkit-box;
-        text-overflow: ellipsis;
-        min-height: 40px;
-        margin-bottom: 55px;
-        font-family: @header-font;
-        font-size: 1em !important;
-        text-overflow: ellipsis;
-        @media(max-width: @mobile-breakpoint) {
-          min-height: unset;
-          height: fit-content;
-          max-height: fit-content;
-          position: relative;
-          margin-bottom: 20px;
-        }
+        display: none;
       }
 
       .post-permalink {
