--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -44,7 +44,7 @@
   .series-article-preview {
     position: relative;
     background: white;
-    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+    box-shadow: @shadow-color;
     margin-bottom: 10px;
     max-width: -webkit-fill-available;
     @media(max-width:800px) {
@@ -92,7 +92,7 @@
     height: 29px;
     margin-bottom: 20px;
     background: #ffffff;
-    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+    box-shadow: @shadow-color;
     padding: 12px;
     align-items: center;
     justify-content: flex-end;
