--- a/src/less/posts/newsletter-widget.less
+++ b/src/less/posts/newsletter-widget.less
@@ -1,7 +1,7 @@
 .widget.newsletter {
   background: white;
   display: none;
-  box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+  box-shadow: @shadow-color;
   width: 92%;
   margin: 0 auto 20px;
   padding: 15px;
