--- a/src/less/etc/transaction.less
+++ b/src/less/etc/transaction.less
@@ -2,7 +2,7 @@
   background: white;
   padding: 20px 40px;
   margin: 40px auto;
-  box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+  box-shadow: @shadow-color;
   width: 80% !important;
 }
 
