--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -9,7 +9,7 @@
 	margin:  0 0 30px;
 	width: -webkit-fill-available;
 	width: -moz-fill-available;
-	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+	box-shadow: @shadow-color;
 	@media(max-width: @tablet-breakpoint) {
 		margin: 0 auto 20px;
 		padding: 40px 0;
