--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -307,7 +307,6 @@
 		width: -webkit-fill-available;
 		width: -moz-fill-available;
 		padding: 13px;
-		border-radius: 3px;
 		background: #fff;
 		font-size: 12px;
 		font-weight: 300;
@@ -315,6 +314,7 @@
 		border: 1px solid #d5dbe6;
 		transition: @transition;
 		margin-bottom: 10px;
+		-webkit-appearance: none;
 
 		&::placeholder {
 			opacity: 1;
