--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -129,7 +129,7 @@
   }
 
   #kanban {
-    margin: 20px;
+    margin: 20px 0;
     width: auto;
     display: block;
     overflow: hidden;
@@ -187,7 +187,7 @@
       border: 1px solid #f9f9f9;
       position: relative;
       max-width: 98%;
-      border-radius: 5px;
+      border-radius: 3px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
       display: inline-block;
