--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -25,13 +25,13 @@
   }
 
   .intro {
-    margin-bottom: 40px;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   h3 {
     font-family: @body-font-bold !important;
     margin-bottom: 0;
-    font-size: 1.4em;
+    font-size: 1.3em;
+    color: @grey-header;
   }
 }
