--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,9 +1,10 @@
 <!-- Start Scripts -->
 <!--<script src="{{asset "js/includes/content-api.min.js"}}"></script>-->
-<script defer src="{{asset "js/includes/ghost-search.min.js"}}"></script>
+<script src="{{asset "js/critical.js"}}"></script>
+<script async src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 <script src="{{asset "js/includes/retina.min.js"}}"></script>
 <!--<script src="{{asset "js/includes/picturefill.min.js"}}"></script>-->
-<script src="{{asset "js/critical.js"}}"></script>
+
 <script async src="{{asset "js/global.js"}}"></script>
 <noscript id="deferred-styles">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/regular.css" integrity="sha384-jyNdSTwsauV6/i9u6sKFOZBrxlr4QREAY295HsNy8laz4LYryhnPdz0ewFVERKfV" crossorigin="anonymous">
