--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -42,6 +42,8 @@
       }
     }
 
+
+
     article {
       width: 100%;
       height: auto;
@@ -149,11 +151,16 @@
 
 .page-series {
   .page-head {
-    margin: 40px 40px 0;
+    margin: 0;
     padding: 0;
-    @media(max-width: @tablet-breakpoint) {
-      margin: 40px 20px 0;
+
+    .page-title {
+      margin-top: 0;
     }
+  }
+
+  .main-content {
+    padding: 40px;
   }
 
   .post-title {
@@ -186,12 +193,8 @@
 
   p {
     color: #505050;
-    margin: -20px 40px 30px;
+    margin: -20px 0 30px;
     font-weight: 300;
-    @media(max-width: 900px) {
-      min-height: 63px;
-      margin: -20px 20px 30px;
-    }
   }
 
   .tag-container {
@@ -200,12 +203,11 @@
     grid-template-rows: 324px;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    margin: 30px 40px 40px;
+    margin: 30px 0 0;
 
     @media(max-width: @mobile-breakpoint) {
       grid-template-columns: [first] 1fr;
       grid-template-rows: 342px;
-      margin: 20px 20px 30px;
       grid-column-gap: 15px;
     }
 
@@ -319,7 +321,7 @@
           height: 140px;
         }
         @media(max-width: @mobile-breakpoint) {
-          height: 126px;
+          height: 106px;
         }
 
         h2 {
