--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -33,15 +33,15 @@
   display: block;
   box-sizing: border-box;
   border: 1px solid @gray;
-  margin: 10px 0;
+  margin: 5px 0;
   padding: 15px;
   color: @text;
   text-decoration: none;
   font-size: 13px;
   flex: 1;
-  max-width: 32%;
+  max-width: 32.5%;
   min-width: 32%;
-  border-radius: 3px;
+  border-radius: 2px;
   @media(max-width: @tablet-breakpoint) {
     min-width: 49%;
   }
@@ -51,8 +51,8 @@
   }
 
   h3 {
-    margin-top: 0;
-    color: @color-github;
+    margin: 0 0 5px;
+    color: @color-github !important;
     font-size: 18px !important;
     line-height: 1.3;
     font-weight: 400;
