--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -18,7 +18,6 @@
 	@media(max-width: @mobile-breakpoint) {
 		display: block;
 		padding: 50px;
-		margin-top: 20px;
 	}
 	@media(max-width: 500px) {
 		padding: 40px;
@@ -251,8 +250,7 @@
 		line-height: 1.5;
 		font-size: 0.85em;
 		font-family: @body-font;
-		font-weight: 300;
-		color: white;
-		margin: 0;
+		color: white !important;
+		margin: 0 !important;
 	}
 }
