--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -29,6 +29,9 @@ section {
 	max-width: 1100px;
 	margin: 0 auto 30px;
 	padding-top: 1px;
+	@media(max-width: @mobile-breakpoint) {
+		margin: 0 auto;
+	}
 }
 
 strong {
