--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -156,11 +156,12 @@
 
     .page-title {
       margin-top: 0;
+      margin-bottom: 40px;
     }
   }
 
   .main-content {
-    padding: 40px;
+    padding: 40px 30px;
   }
 
   .post-title {
@@ -321,7 +322,7 @@
           height: 140px;
         }
         @media(max-width: @mobile-breakpoint) {
-          height: 106px;
+          height: 116px;
         }
 
         h2 {
