--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -25,11 +25,10 @@
   }
 
   .intro {
-    margin-top: 10px;
+    margin: 10px 0;
   }
 
   h3 {
-    font-family: @body-font-bold !important;
     margin-bottom: 0;
     font-size: 1.3em;
     color: @grey-header;
