--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -65,6 +65,7 @@ table {
   @media (max-width:600px) {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
+    max-height: 600px;
 
     * {
       &:hover {
